# kerai

./: .deploy.sh  .gitignore  .launch.sh  CLAUDE.md  Cargo.toml  README.md  com.primal.kerai.plist  conversation-kerai-design.md  musings.md
cli/src/: db.rs  main.rs
cli/src/commands/: bounty.rs  currency.rs  find.rs  market.rs  mod.rs  swarm.rs  tree.rs  wallet.rs
kerai/: Cargo.toml  terminal.html
kerai/src/: config.rs  home.rs  lib.rs  main.rs  output.rs
kerai/src/commands/: agent.rs  checkout.rs  commit.rs  connect.rs  consensus_cmd.rs  currency.rs  export.rs  import.rs  info.rs  init.rs  init_cmd.rs  log.rs  market.rs  mod.rs  model.rs  peer.rs  perspective.rs  ping.rs  query.rs  refs.rs  stack_cmd.rs  sync.rs  task.rs  version.rs
kerai/src/lang/: ast.rs  eval.rs  expr.rs  machine.rs  mod.rs  parser.rs  pratt.rs  ptr.rs  token.rs
kerai/src/lang/handlers/: arithmetic.rs  login.rs  mod.rs  stack_ops.rs  workspace.rs
kerai/src/serve/: auth.rs  config.rs  db.rs  mod.rs  notify.rs
kerai/src/serve/routes/: documents.rs  eval.rs  health.rs  mod.rs  models.rs  nodes.rs  perspectives.rs  search.rs  stack.rs  ws.rs
plans/: 00-overview.md  01-foundation.md  02-rust-parser.md  03-source-reconstruction.md  04-crdt-operations.md  05-cli.md  06-distribution.md  07-code-queries.md  08-ai-perspectives.md  09-agent-swarms.md  10-zk-marketplace.md  11-external-economy.md  12-kerai-web.md  13-microgpt.md  14-native-currency.md  14-zk-currency.md  17-go-language.md  18-c-language.md  19-repository-ingestion.md  20-active-inference.md  20-zk-currency.md  21-knowledge-crawler.md  22-csv-import.md  23-stack-machine.md
postgres/: Cargo.toml
postgres/src/: init.rs  lib.rs  preferences.rs  schema.rs  stack.rs  workspace.rs
postgres/src/parser/: kinds.rs  mod.rs
postgres/src/parser/csv/: ingest.rs  kinds.rs  mod.rs  nodes.rs  promote.rs  registry.rs
src/: agents.rs  bootstrap.rs  bounties.rs  consensus.rs  crawler.rs  currency.rs  economy.rs  lib.rs  marketplace.rs  peers.rs  perspectives.rs  query.rs  schema.rs  sql.rs  swarm.rs  tasks.rs
src/crdt/: clock.rs  mod.rs  operations.rs
src/functions/: mod.rs  status.rs  stubs.rs  wallet.rs
src/microgpt/: mod.rs  tensor.rs  walks.rs
src/parser/: ast_walker.rs  cargo_parser.rs  comment_extractor.rs  crate_walker.rs  flag_parser.rs  inserter.rs  kinds.rs  metadata.rs  mod.rs  normalizer.rs  path_builder.rs  suggestion_rules.rs
src/parser/c/: metadata.rs  mod.rs  suggestion_rules.rs  walker.rs
src/parser/go/: metadata.rs  mod.rs  walker.rs
src/parser/latex/: bibtex.rs
src/parser/markdown/: mod.rs  walker.rs
src/parser/treesitter/: cursor.rs  mod.rs
src/reconstruct/: assembler.rs  go.rs  markdown.rs  mod.rs
src/repo/: census.rs  cloner.rs  kinds.rs  language_detect.rs  mod.rs  tree_walker.rs
web/: .launch.sh  Dockerfile  docker-compose.yml  terminal.html
web/frontend/: index.html
web/frontend/src/: main.ts  styles.css
web/src/: db.rs
web/src/routes/: eval.rs  mod.rs  ws.rs
