[workspace]
members = ["cli", "web"]

[package]
name = "kerai"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_kerai"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg17"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg_test = []

[dependencies]
pgrx = "=0.17.0"
ed25519-dalek = { version = "2.2", features = ["pkcs8", "pem", "rand_core"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
syn = { version = "2", features = ["full", "extra-traits", "visit"] }
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
toml = "0.8"
walkdir = "2"
uuid = { version = "1", features = ["v4"] }
prettyplease = "0.2"
hex = "0.4"
pulldown-cmark = "0.12"
tree-sitter = "0.24"
tree-sitter-go = "0.23"
tree-sitter-c = "0.23"
git2 = "0.19"
tempfile = "3"

[dev-dependencies]
pgrx-tests = "=0.17.0"

[lints.clippy]
unwrap_used = "warn"
manual_string_new = "warn"
redundant_closure_for_method_calls = "warn"

[profile.dev]
panic = "unwind"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
