[package]
name = "kerai-cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "kerai_cli"
path = "src/lib.rs"

[[bin]]
name = "kerai"
path = "src/main.rs"

[dependencies]
postgres = { version = "0.19", features = ["with-serde_json-1", "with-uuid-1"] }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
uuid = "1"
