[package]
name = "kerai-cli"
version = "0.1.0"
edition = "2021"

[lib]
name = "kerai_cli"
path = "src/lib.rs"

[[bin]]
name = "kerai"
path = "src/main.rs"

[dependencies]
postgres = { version = "0.19", features = ["with-serde_json-1", "with-uuid-1"] }
clap = { version = "4", features = ["derive"] }
comfy-table = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "6"
uuid = { version = "1", features = ["v4"] }
axum = { version = "0.8", features = ["ws"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1"] }
tower-http = { version = "0.6", features = ["fs", "cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
reqwest = { version = "0.12", features = ["json"] }
rand = "0.8"
base64 = "0.22"
